[package]
name = "standard-error"
description = "simplifies returning meaningful errors for axum services"
authors = ["ashupednekar <ashupednekar49@gmail.com>"]
version = "0.1.4"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
config = "0.14.0"
diesel = { version = "2.2.4", default-features = false, features = ["extras"], optional = true}
env_logger = "0.11.5"
git2 = {version = "0.18.2", optional = true}
lazy_static = "1.5.0"
log = "0.4.22"
r2d2-oracle = { version = "0.7.0", optional = true }
r2d2_postgres = { version = "0.18.1", optional = true }
reqwest = { version = "0.12.7", optional = true }
serde = "1.0.208"
serde_json = { version = "1.0.125", optional = true }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["test-util"] }
validator = { version = "0.18.1", optional = true }

[features]
diesel = ["dep:diesel"]
git = ["dep:git2"]
r2d2-oracle = ["dep:r2d2-oracle"]
r2d2_postgres = ["dep:r2d2_postgres"]
reqwest = ["dep:reqwest"]
json = ["dep:serde_json"]
validator = ["dep:validator"]
