[package]
name = "standard-error"
description = "simplifies returning meaningful errors for axum services"
authors = ["ashupednekar <ashupednekar49@gmail.com>"]
version = "0.1.4"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
config = "0.14.0"
diesel = { version = "2.2.4", default-features = false, features = ["extras"], optional = true}
env_logger = "0.11.5"
git2 = {version = "0.18.2", optional = true}
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.12.7", optional = true }
serde = "1.0.208"
serde_json = "1.0.125"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["test-util"] }
validator = { version = "0.18.1", optional = true }

[features]
diesel = ["dep:diesel"]
git = ["dep:git2"]
reqwest = ["dep:reqwest"]
validator = ["dep:validator"]
